--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -168,7 +168,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>2</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -254,16 +254,6 @@
         <string>Pictures</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_7">
-        <item row="1" column="2">
-         <widget class="QPushButton" name="pictureVoteDown">
-          <property name="text">
-           <string>VoteDown</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QGraphicsView" name="graphicsView"/>
-        </item>
         <item row="2" column="0">
          <widget class="QPushButton" name="pictureInspire">
           <property name="text">
@@ -271,10 +261,10 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="2">
-         <widget class="QPushButton" name="pictureUpload">
+        <item row="2" column="1">
+         <widget class="QPushButton" name="pictureRandom">
           <property name="text">
-           <string>Upload</string>
+           <string>Random</string>
           </property>
          </widget>
         </item>
@@ -285,10 +275,24 @@
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
-         <widget class="QPushButton" name="pictureRandom">
+        <item row="2" column="2">
+         <widget class="QPushButton" name="pictureUpload">
           <property name="text">
-           <string>Random</string>
+           <string>Upload</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="2">
+         <widget class="QPushButton" name="pictureVoteDown">
+          <property name="text">
+           <string>VoteDown</string>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="0" colspan="3">
+         <widget class="QLabel" name="lbl_pic">
+          <property name="text">
+           <string>TextLabel</string>
           </property>
          </widget>
         </item>
