--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -254,35 +254,14 @@
         <string>Pictures</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_7">
-        <item row="2" column="0">
+        <item row="5" column="0">
          <widget class="QPushButton" name="pictureInspire">
           <property name="text">
            <string>Inspire</string>
           </property>
          </widget>
         </item>
-        <item row="2" column="1">
-         <widget class="QPushButton" name="pictureRandom">
-          <property name="text">
-           <string>Random</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0" colspan="2">
-         <widget class="QPushButton" name="pictureVoteUp">
-          <property name="text">
-           <string>VoteUp</string>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="2">
-         <widget class="QPushButton" name="pictureUpload">
-          <property name="text">
-           <string>Upload</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2">
          <widget class="QPushButton" name="pictureVoteDown">
           <property name="text">
            <string>VoteDown</string>
@@ -290,10 +269,100 @@
          </widget>
         </item>
         <item row="0" column="0" colspan="3">
-         <widget class="QLabel" name="lbl_pic">
-          <property name="text">
-           <string>TextLabel</string>
+         <widget class="QTableWidget" name="tbl_pic">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>300</height>
+           </size>
           </property>
+          <property name="editTriggers">
+           <set>QAbstractItemView::NoEditTriggers</set>
+          </property>
+          <property name="selectionBehavior">
+           <enum>QAbstractItemView::SelectRows</enum>
+          </property>
+          <column>
+           <property name="text">
+            <string>No</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>Picture URL</string>
+           </property>
+          </column>
+          <column>
+           <property name="text">
+            <string>DateTime</string>
+           </property>
+          </column>
+         </widget>
+        </item>
+        <item row="2" column="0" colspan="2">
+         <widget class="QPushButton" name="pictureVoteUp">
+          <property name="text">
+           <string>VoteUp</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="2">
+         <widget class="QPushButton" name="pictureUpload">
+          <property name="text">
+           <string>Upload</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QPushButton" name="pictureRandom">
+          <property name="text">
+           <string>Random</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" colspan="3">
+         <widget class="QWidget" name="widget_8" native="true">
+          <layout class="QHBoxLayout" name="horizontalLayout_12">
+           <item>
+            <spacer name="horizontalSpacer_10">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+           <item>
+            <widget class="QLabel" name="lbl_pic">
+             <property name="minimumSize">
+              <size>
+               <width>500</width>
+               <height>0</height>
+              </size>
+             </property>
+             <property name="text">
+              <string/>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer name="horizontalSpacer_11">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+             <property name="sizeHint" stdset="0">
+              <size>
+               <width>40</width>
+               <height>20</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
          </widget>
         </item>
        </layout>
